k8s/navidrome/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: navidrome
        image: deluan/navidrome:latest
        ports:
        - containerPort: 4533
        volumeMounts:
        - name: data
          mountPath: /data
        - name: music
          mountPath: /music
          readOnly: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: navidrome-data
      - name: music
        persistentVolumeClaim:
          claimName: navidrome-music
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: homelab
spec:
  selector:
    app: navidrome
  ports:
  - port: 4533
    targetPort: 4533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: homelab
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: homelab-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - music.sqweeb.net
    secretName: navidrome-tls
  rules:
  - host: music.sqweeb.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navidrome
            port:
              number: 4533
